<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripExpenses">

    <include
        android:id="@+id/toolbar_trip"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_trip">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/emp_id"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/emp_id"
                android:padding="3dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/start_km"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/start_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/start_km"
                android:padding="3dp"
                android:textSize="18sp" />


            <Button
                android:id="@+id/start_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="3dp"
                android:text="@string/upload_st_km"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/start_image"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="3dp"
                android:text="@string/end_km"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/end_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/end_km"
                android:padding="3dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/end_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="3dp"
                android:text="@string/upload_end_km"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/end_image"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="3dp"
                android:text="@string/fuel_liters"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/fuel_liters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/fuel_liters"
                android:padding="3dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="3dp"
                android:text="@string/expenses"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/expenses"
                android:padding="3dp"
                android:textSize="18sp" />


            <Button
                android:id="@+id/save_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>